--- a/style.css
+++ b/style.css
@@ -49,6 +49,12 @@ body, html {
   cursor: pointer;
 }
 
+.icon:hover {
+  background-color: #f0f0f0;
+  border-radius: 8px;
+  padding: 6px;
+}
+
 .separator {
   width: 30px;
   height: 1px;
