--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body, html {
 .icon {
   width: 40px;
   height: 40px;
+  margin: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
